# nagaki_wsp_agent

./: # ✅ GUION DEFINITIVO – SESIÓN DE ONBOARD.md  .cursorignore  .env.example  DEPLOYMENT.md  INSTALL_WSL.md  Improve.txt  OBJECTIVE.md  ONBOARDING.md  Procfile  deploy.sh  install.sh  langgraph.json  main.py  pyproject.toml  read_checkpointer.py  start.sh
docker/evolution-api/: docker-compose.yml
docs/: ANTI_SPAM_QUICK_START.md  ANTI_SPAM_SYSTEM.md  API_SUMMARY.md  EVOLUTION_API_SETUP.md  QUALIFIED_NOTIFICATION.md  leads_api_config.md  property_api_config.md
examples/: leads_api_example.py  property_api_example.py
scripts/: configure_evolution_webhook.sh
src/support/agent/: __init__.py  agent.py  background_tasks.py  lead_sync.py  state.py  utils.py
src/support/agent/docs_rag/: types.md
src/support/agent/nodes/classify_user/: node.py  prompt.py  tools.py
src/support/agent/nodes/conversation/: node.py  prompt.py  rag.py  tools.py
src/support/agent/nodes/qualified/: node.py
src/support/agent/nodes/verification/: node.py
src/support/agent/qualification/: __init__.py  evaluator.py  models.py  publisher.py  service.py  snapshot_utils.py  store.py  worker.py
src/support/agent/routes/: verification_route.py
src/support/api/: evolution_webhook.py
src/support/utils/: __init__.py  audio.py  delay_manager.py  message_buffer.py  spam_detector.py  text_normalizer.py  whatsapp_formatter.py
tests/: check_audio_transcription.py  test_buffer_concurrency.py  test_lead_sync_idempotency.py  test_property_presentation.py  test_qualification_worker_notifications.py  test_snapshot_utils.py
